--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,8 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
-              "zone.js"
+              "zone.js",
+              "src/process.ts"
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
@@ -27,7 +28,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "mycena-store"
+            ]
           },
           "configurations": {
             "production": {
