--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,10 +3,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["node"]
   },
   "files": [
-    "src/main.ts"
+    "src/main.ts","src/process.ts"
   ],
   "include": [
     "src/**/*.d.ts"
