--- a/libs/mhn-store/project.json
+++ b/libs/mhn-store/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "taipower-store",
+  "name": "mhn-store",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/taipower-store/src",
+  "sourceRoot": "libs/mhn-store/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/taipower-store/**/*.ts"]
+        "lintFilePatterns": ["libs/mhn-store/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/taipower-store/jest.config.ts",
+        "jestConfig": "libs/mhn-store/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
