--- a/libs/mhn-store/tsconfig.json
+++ b/libs/mhn-store/tsconfig.json
@@ -8,7 +8,16 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@mhn-strategy/mhn-store": [
+        "libs/mhn-store/src/index.ts"
+      ],
+      "@mhn-strategy/mhn-store/*": [
+        "libs/mhn-store/src/lib/*"
+      ],
+      "@mhn-strategy/shared/inspection": ["libs/shared/inspection/src/index.ts"],
+    }
   },
   "files": [],
   "include": [],
