--- a/libs/mhn-store/tsconfig.json
+++ b/libs/mhn-store/tsconfig.json
@@ -9,6 +9,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
     "paths": {
       "@mhn-strategy/mhn-store": [
         "libs/mhn-store/src/index.ts"
